add HLS course #

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: homepage
         <div class="term mb-4">
             <h4 class="mb-3" style="font-weight: 600">Winter 2023</h4>
             <div class="course mb-3">
-                <h6><span style="font-weight: 600">Computer Science for Lawyers</span>, Harvard Law School</h6>
+                <h6><span style="font-weight: 600">Computer Science for Lawyers (HLS 2260)</span>, Harvard Law School</h6>
                 <p style="color: grey;">Preceptor</p>
             </div>
         </div>
@@ -66,7 +66,7 @@ layout: homepage
         <div class="term mb-4">
             <h4 class="mb-3" style="font-weight: 600">Winter 2022</h4>
             <div class="course mb-3">
-                <h6><span style="font-weight: 600">Computer Science for Lawyers</span>, Harvard Law School</h6>
+                <h6><span style="font-weight: 600">Computer Science for Lawyers (HLS 2260)</span>, Harvard Law School</h6>
                 <p style="color: grey;">Preceptor</p>
             </div>
         </div>
