--- a/index.html
+++ b/index.html
@@ -9,72 +9,72 @@ layout: homepage
             <h4 class="mb-3" style="font-weight: 600">Fall 2023</h4>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Introduction to Databases with SQL (CSCI E-151)</span>, Harvard Extension School</h6>
-                <p style="color: grey;">Instructor</p>
+                <p>Instructor</p>
             </div>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Introduction to Computer Science (CS50)</span>, Harvard College</h6>
-                <p style="color: grey;">Preceptor</p>
+                <p>Preceptor</p>
             </div>
         </div>
         <div class="term mb-4">
             <h4 class="mb-3" style="font-weight: 600">Spring 2023</h4>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Introduction to Databases with SQL</span>, OpenCourseWare</h6>
-                <p style="color: grey;">Instructor</p>
+                <p>Instructor</p>
             </div>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Introduction to Computer Science (CS50)</span>, Harvard College</h6>
-                <p style="color: grey;">Preceptor</p>
+                <p>Preceptor</p>
             </div>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Computer Science for Managers (HBS 7475 & 7473)</span>, Harvard Business School</h6>
-                <p style="color: grey;">Preceptor</p>
+                <p>Preceptor</p>
             </div>
         </div>
         <div class="term mb-4">
             <h4 class="mb-3" style="font-weight: 600">Winter 2023</h4>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Computer Science for Lawyers (HLS 2260)</span>, Harvard Law School</h6>
-                <p style="color: grey;">Preceptor</p>
+                <p>Preceptor</p>
             </div>
         </div>
         <div class="term mb-4">
             <h4 class="mb-3" style="font-weight: 600">Fall 2022</h4>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Introduction to Computer Science (CS50)</span>, Harvard College</h6>
-                <p style="color: grey;">Preceptor</p>
+                <p>Preceptor</p>
             </div>
         </div>
         <div class="term mb-4">
             <h4 class="mb-3" style="font-weight: 600">Summer 2022</h4>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Intensive Introduction to Computer Science (CSCI S-50)</span>, Harvard Extension School</h6>
-                <p style="color: grey;">Teaching Fellow</p>
+                <p>Teaching Fellow</p>
             </div>
         </div>
         <div class="term mb-4">
             <h4 class="mb-3" style="font-weight: 600">Spring 2022</h4>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Introduction to Computer Science (CS50)</span>, Harvard College</h6>
-                <p style="color: grey;">Preceptor</p>
+                <p>Preceptor</p>
             </div>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Computer Science for Managers (HBS 7475 & 7473)</span>, Harvard Business School</h6>
-                <p style="color: grey;">Preceptor</p>
+                <p>Preceptor</p>
             </div>
         </div>
         <div class="term mb-4">
             <h4 class="mb-3" style="font-weight: 600">Winter 2022</h4>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Computer Science for Lawyers (HLS 2260)</span>, Harvard Law School</h6>
-                <p style="color: grey;">Preceptor</p>
+                <p>Preceptor</p>
             </div>
         </div>
         <div class="term mb-4">
             <h4 class="mb-3" style="font-weight: 600">Fall 2021</h4>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Introduction to Computer Science (CS50)</span>, Harvard College</h6>
-                <p style="color: grey;">Preceptor</p>
+                <p>Preceptor</p>
             </div>
         </div>
     </div>
