add spring 2024 courses

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@ layout: homepage
 <div class="row">
     <div class="col">
         <div class="term mb-4">
+            <h4 class="mb-3" style="font-weight: 600">Spring 2024</h4>
+            <div class="course mb-3">
+                <h6><span style="font-weight: 600">Introduction to Programming with R</span>, OpenCourseWare</h6>
+                <p>Instructor</p>
+            </div>
+            <div class="course mb-3">
+                <h6><span style="font-weight: 600">Introduction to Databases with SQL (CSCI E-151)</span>, Harvard Extension School</h6>
+                <p>Instructor</p>
+            </div>
+            <div class="course mb-3">
+                <h6><span style="font-weight: 600">Introduction to Computer Science (CS50)</span>, Harvard College</h6>
+                <p>Preceptor</p>
+            </div>
+        </div>
+        <div class="term mb-4">
             <h4 class="mb-3" style="font-weight: 600">Fall 2023</h4>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Introduction to Databases with SQL (CSCI E-151)</span>, Harvard Extension School</h6>
