--- a/courses.html
+++ b/courses.html
@@ -8,11 +8,9 @@ layout: homepage
         <div class="course mb-4">
             <h4 class="mb-1" style="font-weight: 600">CS50's Introduction to Databases with SQL</h4>
             <p>
-                <span class="badge rounded-pill text-bg-primary">Online</span>
-                <span class="badge rounded-pill text-bg-success">Interactive</span>
-                <span class="badge rounded-pill text-bg-secondary">Freely Available</span>
+                <a href="https://cs50.harvard.edu/sql" target="_blank"><span class="badge rounded-pill text-bg-primary">Start learning! ✨</span></a>
             </p>
-            <p>Available as <a href="https://cs50.harvard.edu/sql">OpenCourseWare</a> and via <a href="https://cs50.edx.org/sql">edX</a>.
+            <p>Available, entirely for free, as <a href="https://cs50.harvard.edu/sql">OpenCourseWare</a>. Also available via <a href="https://cs50.edx.org/sql">edX</a>.
             <p>An introduction to databases using a language called SQL. Learn how to create, read, update, and delete data with relational databases, which store data in rows and columns. Learn how to model real-world entities and relationships among them using tables with appropriate types, triggers, and constraints. Learn how to normalize data to eliminate redundancies and reduce potential for errors. Learn how to join tables together using primary and foreign keys. Learn how to automate searches with views and expedite searches with indexes. Learn how to connect SQL with other languages like Python and Java. Course begins with SQLite for portability’s sake and ends with introductions to PostgreSQL and MySQL for scalability’s sake as well. Assignments inspired by real-world datasets.</p>
             <h5 style="font-weight: 600">Videos</h5>
             <ul>
@@ -38,12 +36,9 @@ layout: homepage
         <div class="course mb-4">
             <h4 class="mb-1" style="font-weight: 600">CS50's Introduction to Programming with R</h4>
             <p>
-                <span class="badge rounded-pill text-bg-primary">Online</span>
-                <span class="badge rounded-pill text-bg-success">Interactive</span>
-                <span class="badge rounded-pill text-bg-secondary">Freely Available</span>
-                <span class="badge rounded-pill text-bg-info">Coming Soon!</span>
+                <span style="color: white" class="badge rounded-pill text-bg-info">Coming Soon!</span>
             </p>
-            <p>Available as <a href="https://cs50.harvard.edu/r">OpenCourseWare</a> and via <a href="https://cs50.edx.org/r">edX</a>.</p>
+            <p>Available, entirely for free, as <a href="https://cs50.harvard.edu/r">OpenCourseWare</a>. Also available via <a href="https://cs50.edx.org/r">edX</a>.</p>
             <p>An introduction to programming using a language called R, a popular language for statistical computing and graphics in data science and other domains. Learn to use RStudio, a popular integrated development environment (IDE). Learn to represent real-world data with vectors, matrices, arrays, lists, and data frames. Filter data with conditions, via which you can analyze subsets of data. Apply functions and loops, via which you can manipulate and summarize data sets. Write functions to modularize code and raise exceptions when something goes wrong. Tidy data with R’s tidyverse and create colorful visualizations with R’s grammar of graphics. By course’s end, learn to package, test, and share R code for others to use. Assignments inspired by real-world data sets.</p>
             <h5 style="font-weight: 600">Videos</h5>
             <ul>
