--- a/index.html
+++ b/index.html
@@ -6,44 +6,55 @@ layout: homepage
 <div class="row">
     <div class="col">
         <div class="term mb-4">
+            <h4 class="mb-3" style="font-weight: 600">Summer 2024</h4>
+            <div class="course mb-3">
+                <h6><span style="font-weight: 600">Introduction to Databases with SQL (CSCI S-151)</span>, Harvard Extension School</h6>
+                <p class="role">Instructor</p>
+            </div>
+            <div class="course mb-3">
+                <h6><span style="font-weight: 600">Introduction to Programming with R (CSCI S-5A)</span>, Harvard Extension School</h6>
+                <p class="role">Instructor</p>
+            </div>
+        </div>
+        <div class="term mb-4">
             <h4 class="mb-3" style="font-weight: 600">Spring 2024</h4>
             <div class="course mb-3">
-                <h6><span style="font-weight: 600">Introduction to Programming with R</span>, OpenCourseWare</h6>
-                <p class="role">Instructor</p>
+                <h6><span style="font-weight: 600">Introduction to Computer Science (CS50)</span>, Harvard College</h6>
+                <p class="role">Preceptor</p>
             </div>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Introduction to Databases with SQL (CSCI E-151)</span>, Harvard Extension School</h6>
                 <p class="role">Instructor</p>
             </div>
             <div class="course mb-3">
-                <h6><span style="font-weight: 600">Introduction to Computer Science (CS50)</span>, Harvard College</h6>
-                <p class="role">Preceptor</p>
+                <h6><span style="font-weight: 600">Introduction to Programming with R</span>, OpenCourseWare</h6>
+                <p class="role">Instructor</p>
             </div>
         </div>
         <div class="term mb-4">
             <h4 class="mb-3" style="font-weight: 600">Fall 2023</h4>
             <div class="course mb-3">
-                <h6><span style="font-weight: 600">Introduction to Databases with SQL (CSCI E-151)</span>, Harvard Extension School</h6>
-                <p class="role">Instructor</p>
-            </div>
-            <div class="course mb-3">
                 <h6><span style="font-weight: 600">Introduction to Computer Science (CS50)</span>, Harvard College</h6>
                 <p class="role">Preceptor</p>
+            </div>
+            <div class="course mb-3">
+                <h6><span style="font-weight: 600">Introduction to Databases with SQL (CSCI E-151)</span>, Harvard Extension School</h6>
+                <p class="role">Instructor</p>
             </div>
         </div>
         <div class="term mb-4">
             <h4 class="mb-3" style="font-weight: 600">Spring 2023</h4>
             <div class="course mb-3">
-                <h6><span style="font-weight: 600">Introduction to Databases with SQL</span>, OpenCourseWare</h6>
-                <p class="role">Instructor</p>
+                <h6><span style="font-weight: 600">Computer Science for Managers (HBS 7475 & 7473)</span>, Harvard Business School</h6>
+                <p class="role">Preceptor</p>
             </div>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Introduction to Computer Science (CS50)</span>, Harvard College</h6>
                 <p class="role">Preceptor</p>
             </div>
             <div class="course mb-3">
-                <h6><span style="font-weight: 600">Computer Science for Managers (HBS 7475 & 7473)</span>, Harvard Business School</h6>
-                <p class="role">Preceptor</p>
+                <h6><span style="font-weight: 600">Introduction to Databases with SQL</span>, OpenCourseWare</h6>
+                <p class="role">Instructor</p>
             </div>
         </div>
         <div class="term mb-4">
@@ -70,11 +81,11 @@ layout: homepage
         <div class="term mb-4">
             <h4 class="mb-3" style="font-weight: 600">Spring 2022</h4>
             <div class="course mb-3">
-                <h6><span style="font-weight: 600">Introduction to Computer Science (CS50)</span>, Harvard College</h6>
+                <h6><span style="font-weight: 600">Computer Science for Managers (HBS 7475 & 7473)</span>, Harvard Business School</h6>
                 <p class="role">Preceptor</p>
             </div>
             <div class="course mb-3">
-                <h6><span style="font-weight: 600">Computer Science for Managers (HBS 7475 & 7473)</span>, Harvard Business School</h6>
+                <h6><span style="font-weight: 600">Introduction to Computer Science (CS50)</span>, Harvard College</h6>
                 <p class="role">Preceptor</p>
             </div>
         </div>
