Update badge color

--- a/courses.html
+++ b/courses.html
@@ -36,7 +36,7 @@ layout: homepage
         <div class="course mb-4">
             <h4 class="mb-1" style="font-weight: 600">CS50's Introduction to Programming with R</h4>
             <p>
-                <span style="color: white" class="badge rounded-pill text-bg-info">Coming Soon!</span>
+                <span class="badge rounded-pill text-bg-primary">Coming Soon!</span>
             </p>
             <p>Available, entirely for free, as <a href="https://cs50.harvard.edu/r">OpenCourseWare</a>. Also available via <a href="https://cs50.edx.org/r">edX</a>.</p>
             <p>An introduction to programming using a language called R, a popular language for statistical computing and graphics in data science and other domains. Learn to use RStudio, a popular integrated development environment (IDE). Learn to represent real-world data with vectors, matrices, arrays, lists, and data frames. Filter data with conditions, via which you can analyze subsets of data. Apply functions and loops, via which you can manipulate and summarize data sets. Write functions to modularize code and raise exceptions when something goes wrong. Tidy data with R’s tidyverse and create colorful visualizations with R’s grammar of graphics. By course’s end, learn to package, test, and share R code for others to use. Assignments inspired by real-world data sets.</p>
