Add scenario-based learning, tweak wording for construction

--- a/courses/sql/index.html
+++ b/courses/sql/index.html
@@ -48,7 +48,7 @@ layout: homepage
             <li><b>Direct instruction</b>, in the form of lectures, to introduce content</li>
             <li><b>Reflection</b>, in the form of checks for understanding, to elicit understanding from lectures</li>
             <li><b>Peer learning</b>, through sections, to promote hands-on practice with the course's concepts</li>
-            <li><b>Problem-based learning</b>, through problem sets, in which students test their skills in assignments inspired by real-world scenarios</li>
+            <li><b>Problem- and scenario-based learning</b>, through problem sets, in which students test their skills in assignments inspired by real-world scenarios</li>
         </ul>
         <p>
             Below is a typical student's path through the course:
