Rename from Units to Topics

--- a/courses/index.html
+++ b/courses/index.html
@@ -13,7 +13,7 @@ layout: homepage
             </p>
             <p>Available, entirely for free, as <a href="https://cs50.harvard.edu/sql">OpenCourseWare</a>. Also available via <a href="https://cs50.edx.org/sql">edX</a>.
             <p>An introduction to databases using a language called SQL. Learn how to create, read, update, and delete data with relational databases, which store data in rows and columns. Learn how to model real-world entities and relationships among them using tables with appropriate types, triggers, and constraints. Learn how to normalize data to eliminate redundancies and reduce potential for errors. Learn how to join tables together using primary and foreign keys. Learn how to automate searches with views and expedite searches with indexes. Learn how to connect SQL with other languages like Python and Java. Course begins with SQLite for portability’s sake and ends with introductions to PostgreSQL and MySQL for scalability’s sake as well. Assignments inspired by real-world datasets.</p>
-            <h5 style="font-weight: 600">Units</h5>
+            <h5 style="font-weight: 600">Topics</h5>
             <ul>
                 <li><a href="https://cs50.harvard.edu/sql/2024/weeks/0">Querying</a></li>
                 <li><a href="https://cs50.harvard.edu/sql/2024/weeks/1">Relating</a></li>
@@ -42,7 +42,7 @@ layout: homepage
             </p>
             <p>Available, entirely for free, as <a href="https://cs50.harvard.edu/r">OpenCourseWare</a>. Also available via <a href="https://cs50.edx.org/r">edX</a>.</p>
             <p>An introduction to programming using a language called R, a popular language for statistical computing and graphics in data science and other domains. Learn to use RStudio, a popular integrated development environment (IDE). Learn to represent real-world data with vectors, matrices, arrays, lists, and data frames. Filter data with conditions, via which you can analyze subsets of data. Apply functions and loops, via which you can manipulate and summarize data sets. Write functions to modularize code and raise exceptions when something goes wrong. Tidy data with R’s tidyverse and create colorful visualizations with R’s grammar of graphics. By course’s end, learn to package, test, and share R code for others to use. Assignments inspired by real-world data sets.</p>
-            <h5 style="font-weight: 600">Units</h5>
+            <h5 style="font-weight: 600">Topics</h5>
             <ul>
                 <li><a href="https://cs50.harvard.edu/r/2024/weeks/1">Representing Data</a></li>
                 <li><a href="https://cs50.harvard.edu/r/2024/weeks/2">Transforming Data</a></li>
