--- a/courses/index.html
+++ b/courses/index.html
@@ -54,7 +54,11 @@ layout: homepage
             </ul>
             <h5 style="font-weight: 600">Representative Learning Experiences</h5>
             <ul>
-                <li>Coming July 1!</li>
+                <li><a href="https://cs50.harvard.edu/r/2024/psets/2/librarian/">Librarian</a></li>
+                <li><a href="https://cs50.harvard.edu/r/2024/psets/3/happy/">Happy</a></li>
+                <li><a href="https://cs50.harvard.edu/r/2024/psets/4/zelda/">Zeruda no Densetsu</a></li>
+                <li><a href="https://cs50.harvard.edu/r/2024/psets/5/parked/">Parked Out By The Lake</a></li>
+                <li><a href="https://cs50.harvard.edu/r/2024/psets/6/believe/">Can You Believe in Machines?</a></li>
             </ul>
         </div>
     </div>
