--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@ layout: homepage
 <div class="row">
     <div class="col">
         <div class="term mb-4">
+            <h4 class="mb-3" style="font-weight: 600">Fall 2024</h4>
+            <div class="course mb-3">
+                <h6><span style="font-weight: 600">Introduction to Databases with SQL (CSCI E-151)</span>, Harvard Extension School</h6>
+                <p class="role">Instructor</p>
+            </div>
+            <div class="course mb-3">
+                <h6><span style="font-weight: 600">Introduction to Programming with R (CSCI E-5A)</span>, Harvard Extension School</h6>
+                <p class="role">Instructor</p>
+            </div>
+        </div>
+        <div class="term mb-4">
             <h4 class="mb-3" style="font-weight: 600">Summer 2024</h4>
             <div class="course mb-3">
                 <h6><span style="font-weight: 600">Introduction to Databases with SQL (CSCI S-151)</span>, Harvard Extension School</h6>
