Add Duke workshop

--- a/publications/index.html
+++ b/publications/index.html
@@ -7,6 +7,7 @@ layout: homepage
     <div class="col">
         <p>This is a non-exhaustive list of talks, workshops, publications, and the like, organized by topic and sorted from most to least recent.</p>
         <h4 class="mb-3" style="font-weight: 600">AI in Education</h4>
+        <p><a href="/workshops/2024/fall/emerging-pedagogies/Generative-AI-and-Pedagogical-Innovation.pdf">Generative AI & Pedagogical Innovation</a>, Duke University Emerging Pedagogies Summit 2024</p>
         <p><a href="https://cs.harvard.edu/malan/publications/V1fp0567-liu.pdf">Teaching CS50 with AI: Leveraging Generative Artificial Intelligence in Computer Science Education</a>, SIGCSE 2024</p>
         <p><a href="https://docs.google.com/presentation/d/1Q1nywE78XRvlzZApxMp-1pPH8CAvviHAvMZH0COIqwk/edit">Teaching with AI (GPT)</a>, SIGCSE 2024</p>
         <p><a href="https://www.youtube.com/watch?v=fXchXsmv5Lw">Why a Duck? Teaching CS50 with AI at Harvard University and Seattle University</a>, Carlos Luis Obando</p>
